[Esign Module]: sign-12: Edit Recipients